# scrap

./: .copier-answers.yml  .editorconfig  .gitignore  CHANGELOG.md  Dockerfile  Justfile  README.md  Taskfile.yml  compose.yml  pyproject.toml  tox.ini
.github/: CONTRIBUTING.md  SECURITY.md
NEWS.d/: 20250530_232814_m.makukha.md  20250530_235223_m.makukha_4_extract_code_from_internal_projects.md
docs/: badges.md  features.md  usage.md
docs/openssf/: bestpractices.md
src/scrap/: __init__.py  exception.py  item.py  page.py  project.py  stvector.py  version.py
tests/: requirements.txt  test_usage.py
tests/usage/myproject/: myproject.py  pyproject.toml
